# riot-tracker-bot

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: test-local.sh
src/: db-example.rs  db.rs  discord.rs  index.ts  main.rs  polling.rs  polling.ts  types.rs  web.rs
src/commands/: mod.rs  pause.rs  rank_check.rs  resume.rs  signout.rs  signup.rs
src/discord/: index.ts
src/discord/commands/: index.ts
src/riot_api/: lol.rs  mod.rs  valorant.rs
src/services/database/: index.ts
src/services/discord/: index.ts
src/services/game/: index.ts
src/services/game-adapters/: contract.ts  index.ts
src/services/game/game-adapters/: contract.ts  index.ts  lol.ts  valorant.ts
src/services/game/game-api/lol/: match-schema.ts  riot-api-client.ts
src/services/game/game-api/val/: henrik-api-client.ts  henrik-api.ts  match-schema.ts
src/services/games/lol/: riot-api.ts
src/services/match-engine/: index.ts
src/services/polling/: index.ts
static/: index.html  style.css
