[package]
name = "riot-tracker-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
dotenv = "0.15.0"
poise = "0.6.2"
reqwest = "0.13.4"
serde = "1.0.228"
serde_json = "1.0.150"
serenity = { version = "0.12.5" , features = ["framework", "standard_framework"]}
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
